# autochess

./: CMakeLists.txt  README.md  main.cpp
board/: CMakeLists.txt  board.cpp  board.hpp
board/src/: position.hpp  printer.hpp  rules.hpp
common/: CMakeLists.txt  logger.cpp  logger.hpp
common/logsource/: stream.hpp  stringlog.cpp  stringlog.hpp
display/: CMakeLists.txt  displayapi.hpp  displayhandler.hpp  movestream.hpp  onboardconfig.hpp  onboardmove.hpp
display/api/: presentation.cpp
display/includes/: presentation.hpp
display/src/: configtranslator.cpp  configtranslator.hpp  display.cpp  display.hpp  displayhandler.cpp  movetranslator.cpp  movetranslator.hpp  onboardconfig.cpp  onboardmove.cpp  pieces.cpp  pieces.hpp  piecesmap.hpp  piecetype.hpp  streamitem.hpp  window.cpp  window.hpp
display/src/gui/: cmdtranslator.cpp  cmdtranslator.hpp  console.cpp  console.hpp  demo.hpp  gui.cpp  gui.hpp
